--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 ktorVersion=2.0.0
 kotlinVersion=1.6.10
 logbackVersion=1.2.10
-koinVersion=3.1.5
+koinVersion=3.2.0-beta-1
 kotlin.code.style=official
